asyncprogressdialog:  refactoring  added AbstractTaskWithProgressBar class implementing task which is bound to retained progress bar

--- a/asyncprogressdialog/src/main/res/layout/activity_main.xml
+++ b/asyncprogressdialog/src/main/res/layout/activity_main.xml
@@ -19,4 +19,19 @@
         android:layout_height="wrap_content"
         android:text="run task with progress"/>
 
+    <Button
+        android:id="@+id/runTaskWithBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="run task with progress bar"
+        />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="10"
+        style="?android:attr/progressBarStyleHorizontal"
+        />
+
 </LinearLayout>
