--- a/customlayout/src/main/res/layout/full_custom_layout.xml
+++ b/customlayout/src/main/res/layout/full_custom_layout.xml
@@ -13,13 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="text"/>
+        android:text="Title"/>
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:text="message"
         />
 
 </merge>
