--- a/customlayout/src/main/res/layout/activity_parallax_layout.xml
+++ b/customlayout/src/main/res/layout/activity_parallax_layout.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:parallax_factor="0.2"
+    app:bottom_panel_height="50dp"
     tools:context="com.example.vkirillov.customlayout.DraggablePanelActivity">
 
     <FrameLayout
